# liblineage

./: .gitignore  .readthedocs.yml  README.md  REUSE.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yml
docs/: .gitignore
docs/source/: conf.py  index.rst
liblineage/: __init__.py  __main__.py  device.py  main.py
liblineage/constants/: __init__.py  infra.py  versions.py
liblineage/hudson/: __init__.py  build_target.py  period.py
liblineage/ota/: __init__.py  full_update_info.py
liblineage/updater/: __init__.py  http_utils.py
liblineage/updater/v1/: __init__.py  _deserializer.py  build.py
liblineage/updater/v2/: __init__.py  _deserializer.py  build.py  build_file.py  device.py  oem.py  oem_device.py
liblineage/wiki/: __init__.py  device_data.py
liblineage/wiki/data_types/: __init__.py  architecture_data.py  base_data.py  battery_data.py  bluetooth_data.py  camera_data.py  dimension_data.py  kernel_data.py  network_data.py  peripherals_data.py  release_data.py  screen_data.py  sdcard_data.py
