[tool.poetry]
name = "liblineage"
version = "1.1.0"
description = "LineageOS utils library"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/liblineage"

[tool.poetry.dependencies]
python = "^3.8"
sebaubuntu-libs = "^1.2.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
