[tool.poetry]
name = "liblineage"
version = "1.6.0"
description = "LineageOS utils library"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/liblineage"

[tool.poetry.dependencies]
python = "^3.9"
sebaubuntu-libs = "^1.6.0"
requests = "^2.32.5"
pyyaml = "^6.0"
aiohttp = "^3.8.4"
sphinx = { version = ">=5.0.1,<8.0.0", optional = true }
sphinx-rtd-theme = { version = ">=1,<4", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
